--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -9,6 +10,7 @@
 }
 
 .App-header {
+
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -23,6 +25,97 @@
   color: #61dafb;
 }
 
+.next-salah {
+  display: inline-flex;
+  flex-horizontal-center:1;
+  flex-direction: row;
+  vertical-align: bottom;
+  margin-top: 35px;
+}
+
+.next-salah .continer {
+
+}
+
+.next-salah  .contine .title {
+  font-size: 50px;
+  display: inline-flex;
+  color: #eeeeff;
+  font-size: 35px;
+  margin-right: 10px;
+}
+
+.next-salah .time {
+
+  letter-spacing: normal;
+  font-size: 35px;
+  display: flex;
+  flex-direction: row;
+}
+.next-salah div {
+  color: greenyellow;
+  font-size: 40px;
+}
+
+.toprow {
+
+}
+.iqama {
+  margin-top: 100px;
+  font-size: 0.50in;
+
+}
+
+.iqama .times{
+  color: greenyellow;
+  font-size: 0.70in;
+  margin-top: 30px;
+}
+
+.iqama-times .title{
+  font-size: 0.60in;
+  margin-top: 30px;
+}
+.timecontainer {
+
+  text-align: center;
+}
+
+.time {
+  font-size: 1.5in;
+  letter-spacing: 12px;
+  font-weight: bold;
+  display: inline-flex;
+  flex-horizontal-center:1;
+  flex-direction: row;
+  vertical-align: bottom;
+}
+
+.time .ampm {
+  letter-spacing: normal;
+  font-weight: normal;
+  margin-top: 1.4in;
+  margin-left: 10px;
+  font-size: 22px;
+
+}
+
+.tomorrow-title {
+  font-size: 0.3in;
+  color: #eeeeff;
+  font-weight: bold;
+  margin-top: 100px;
+}
+.tomorrow {
+  margin-top: 20px;
+  font-size: 0.3in;
+  border: #eeeeff;
+  border-block: #eeeeff;
+  border-width: 10px;
+  border-right-color: ;
+ border-color: #eeeeff;
+
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
