--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+
+
 body {
   margin: 0;
+  background: #282c34;
+  color: #61dafb;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
