--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -1,12 +1,14 @@
 
 .toprow {
     height: 180px;
+
 }
 
 .masjid-name {
     padding-top: 10px;
     font-size: 0.25in;
 }
+
 
 .toprow {
     height: 200px;
@@ -17,28 +19,61 @@
     height: 120px;
 }
 
+.masjid-name {
+
+    align-content: center;
+}
+
+.next-salah {
+    vertical-align: bottom;
+    margin-top: 35px;
+
+}
+
+.next-salah .contine .title {
+
+}
+
+.next-salah .time {
+
+}
+
 .next-salah div {
+    color: greenyellow;
     font-size: 35px;
 
 }
 
+
 .timecontainer {
+    font-weight: bold;
     font-size: 0.3in;
 }
 
 .timecontainer .time {
     letter-spacing: 12px;
     font-size: 1.8in;
+    font-weight: bold;
     display: inline-flex;
+    flex-horizontal-center: 1;
+    flex-direction: row;
+    vertical-align: bottom;
+
 }
 
 .timecontainer .time .ampm {
+    letter-spacing: normal;
     font-size: 20%;
+    font-weight: normal;
     margin-top: 1.4in;
+    margin-right: 0px;
     width: 100px;
+
 }
 
+
 .date {
+
     font-size: 0.4in;
 }
 
@@ -56,11 +91,19 @@
 
 .middle-row .title {
     font-size: 0.4in;
+    color: #eeeeff;
+    font-weight: bold;
 }
+
+.tomorrow .iqama {
+
+}
+
 
 .today {
     margin-top: 100px;
     font-size: 0.50in;
+
 }
 
 .today .title {
@@ -68,23 +111,41 @@
     margin-top: 30px;
 }
 
+
 .today time {
+    color: white;
     font-size: 0.90in;
     margin-top: 30px;
 }
 
+.today .current {
+    background: black;
+}
+
+.today .current {
+    background: darkgreen;
+}
+
+.today .next .time {
+    color: greenyellow;
+    font-weight: bold;
+}
+
 .info time {
     font-size: 60%;
+    color: gray;
 }
 
 .info span {
     font-size: 60%;
+    color: gray;
 }
 
 .today .col {
     border: black 7px solid;
     border-radius: 15px;
 }
+
 
 .today .friday {
 
