--- a/src/components/dashboard-1080.css
+++ b/src/components/dashboard-1080.css
@@ -43,25 +43,6 @@ body {
 
 }
 
-.next-salah {
-    vertical-align: top;
-    margin-top: 0px;
-
-}
-
-.next-salah .contine .title {
-
-}
-
-.next-salah .time {
-
-}
-
-.next-salah div {
-    color: greenyellow;
-    font-size: 35px;
-
-}
 
 .toprow {
     height: 180px;
@@ -80,7 +61,7 @@ body {
 
 .timecontainer .time {
     letter-spacing: 0px;
-    font-size: 4in;
+    font-size: 3.8in;
     font-weight: bold;
     display: inline-flex;
 
@@ -90,19 +71,20 @@ body {
 
 .timecontainer .time .ampm {
     letter-spacing: normal;
-    font-size: 10%;
+    font-size: 15%;
     font-weight: normal;
-    margin-top: 4.0in;
+    margin-top: 3.0in;
     margin-right: 0px;
-    Width: 140px;
+    Width: 100px;
 }
 
 
-.timecontainer .date {
+.toprow2 .timecontainer .date {
     align-content: center;
     align-self: center;
-    margin-left: 40px;
+
     font-size: 0.4in;
+
     width: 100%;
 }
 
@@ -157,6 +139,29 @@ body {
 
 .today .current {
     color: greenyellow
+}
+
+.next-salah {
+    vertical-align: top;
+    margin-top: 0px;
+    font-size: 35px;
+    display: inline-flex;
+    flex-horizontal-center: 1;
+    flex-direction: row;
+}
+
+.next-salah .contine .title {
+    font-size: 35px;
+}
+
+.next-salah .time {
+    font-size: 35px;
+}
+
+.next-salah div {
+    color: greenyellow;
+    font-size: 35px;
+
 }
 
 @keyframes App-logo-spin {
