--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -30,6 +30,7 @@
 
 }
 
+
 .next-salah .contine .title {
 
 }
@@ -44,6 +45,9 @@
 
 }
 
+.next-salah .alarm {
+    color: red;
+}
 
 .timecontainer {
     font-weight: bold;
@@ -141,11 +145,6 @@
     color: gray;
 }
 
-.today .col {
-    border: black 7px solid;
-    border-radius: 15px;
-}
-
 
 .today .friday {
 
@@ -159,5 +158,17 @@
     }
     to {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes blinkingText {
+    0% {
+        color: red;
+    }
+    90% {
+        color: red;
+    }
+    100% {
+        color: transparent;
     }
 }
