--- a/src/components/dashboard-1920.css
+++ b/src/components/dashboard-1920.css
@@ -3,27 +3,18 @@ body {
     background: black;
 }
 
-.toprow {
-    height: 180px;
-}
 
 .masjid-name {
     padding-top: 10px;
     font-size: 0.25in;
 }
 
-.toprow {
-    height: 200px;
-    margin-bottom: 20px;
-}
-
-.toprow .row {
-    height: 120px;
-}
 
 .next-salah div {
-    font-size: 35px;
-
+    font-size: 0.5in;
+    display: inline-flex;
+    flex-horizontal-center: 1;
+    flex-direction: row;
 }
 
 .next-salah .alarm {
@@ -33,44 +24,34 @@ body {
     animation: blinkingText 5s infinite;
 }
 
-.timecontainer {
-    font-size: 0.3in;
+.clock {
+    position: fixed;
+    right: 80px;
+    top: -30px;
 }
 
-.timecontainer .time {
-    letter-spacing: 12px;
-    font-size: 1.8in;
+.clock .time {
+    letter-spacing: 10px;
+    font-size: 3in;
     display: inline-flex;
 }
 
-.timecontainer .time .ampm {
-    font-size: 20%;
-    margin-top: 1.4in;
-    width: 100px;
+.clock .time .ampm {
+    font-size: 0.5in;
+    margin-top: 2.7in;
+    width: 150px;
 }
 
 .date {
-    font-size: 0.4in;
+    font-size: 0.5in;
 }
 
 .date-hijri {
-    font-size: 0.4in;
-}
-
-.middle-row {
-    margin-top: 1.9in;
-}
-
-.middle-row {
-    font-size: 0.3in;
-}
-
-.middle-row .title {
-    font-size: 0.4in;
+    font-size: 0.7in;
 }
 
 .today {
-    margin-top: 100px;
+    margin-top: 80px;
     font-size: 0.50in;
 }
 
